[gd_scene load_steps=4 format=3 uid="uid://x1lwev7chtcc"]

[ext_resource type="Script" path="res://main.gd" id="1_qmj53"]
[ext_resource type="PackedScene" uid="uid://dmqs76oj7hyhh" path="res://player.tscn" id="2_vtufg"]
[ext_resource type="PackedScene" uid="uid://clvp4cain5340" path="res://map.tscn" id="3_5fxvx"]

[node name="Main" type="Node"]
script = ExtResource("1_qmj53")
player = ExtResource("2_vtufg")
map = ExtResource("3_5fxvx")

[node name="MapInstance" type="Node" parent="."]
unique_name_in_owner = true

[node name="SpawnPosition" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(200, 150)

[node name="Menu" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -69.0
offset_right = 75.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HostButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="To" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter server IP"

[node name="JoinButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="DisplayPublicIP" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 158.0
offset_bottom = 26.0
metadata/_edit_lock_ = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("../SpawnPosition")

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="text_submitted" from="Menu/MarginContainer/VBoxContainer/To" to="." method="_on_to_text_submitted"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
